# project168

./: main.js  package.json  tauri.conf.json  tsconfig.json
public/: neutralino.js
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/cetak-pricetag/: page.tsx
src/app/laporan/grafik-penjualan/: page.tsx
src/app/laporan/stok/penyesuaian-stok/: page.tsx
src/app/login/: page.tsx
src/app/master-data/: page.tsx
src/app/master-data/katalog/: page.tsx
src/app/master-data/salesman/: page.tsx
src/app/pembelian/: page.tsx
src/app/pengaturan/: page.tsx
src/app/pengaturan/admin-user/: page.tsx
src/app/pengaturan/data-bank/: page.tsx
src/app/pengaturan/utility-administrator/: page.tsx
src/app/penjualan/: page.tsx
src/app/penjualan/laporan-kasir/: page.tsx
src/app/penjualan/laporan-retur/: page.tsx
src/app/penjualan/retur/: page.tsx
src/app/penjualan/transaksi-kas/: page.tsx
src/components/layout/: app-layout.tsx  client-layout.tsx
src/components/ui/: card.tsx  index.ts
src/lib/: backup.ts  local-db.ts  mock-data.ts  types.ts
